# macos-ci

./: .cirrus.yml  .env.sample  .gitignore  CLAUDE.md  Justfile  Makefile  README.md  lychee.toml  macos-versions.toml  pyproject.toml  pyrefly-baseline.json
.claude/: settings.example.json  settings.json
.claude/agents/: log-researcher.md
.claude/commands/: system-debug.md  vm-debug.md  vm-status.md
.claude/skills/triage-logs/: SKILL.md
.claude/skills/triage-patterns/: SKILL.md
.claude/status_lines/: status_line_v10.py
.github/workflows/: ci.yml  pyrefly-diff.yml  pyrefly-type-coverage-comment.yml  pyrefly-type-coverage.yml
.team/: centralized_k0s.backlog.md  centralized_k0s.board.md  claims.jsonl  docs-fleet.board.md  gate-baseline-full.txt  gate-final-full.txt  logwatch.md  macos-ci-build.backlog.md  macos-ci-build.board.md  macos-ci-build.lead-brief.md  macos-ci-build.open-questions.md  macos-ci-build.spawn.json  macos-ci.backlog.md  macos-ci.board.md  macos-ci.open-questions.md
.team/archive/: macos-ci.backlog.md
.team/dispatch/: _RULES.md  harness.md  ledger.md  secrets.md  tart-ci.md  tart-core.md  utm.md
.team/docs-fleet/: dns.factsheet.md  k0s.factsheet.md  netbox.factsheet.md  pki.factsheet.md  unifi.factsheet.md
.team/docs-fleet/prompts/: claude-md-author.md  dns.md  docs-readme-author.md  k0s.md  netbox.md  pki.md  readme-author.md  reviewer.md  unifi.md
.team/proposed/: harness.jsonl  lead.jsonl  ledger.jsonl  secrets.jsonl  synth.jsonl  tart-ci.jsonl  tart-core.jsonl  utm.jsonl
docs/: README.md
docs/architecture/: README.md  build-pipeline.md  cli-reference.md  dependencies.md  justfile-reference.md  repo-structure.md
docs/contributor/: README.md  boss-cmux-workflow.md  cost-and-token-report.md  team-coordination-mechanics.md
docs/tutorials/: 01-getting-started.md  02-running-the-harness.md  03-building-the-golden-image.md  04-verifying-the-truth-gate.md  05-debugging-a-failed-run.md  06-utm-testing-a-pr-branch.md  README.md
harness/seed-config/: README.md  all-features.yaml  lean-baseline.yaml
harness/ssh/: README.md  id_ed25519_harness  id_ed25519_harness.pub
packer/: tart-golden-image.pkr.hcl
packer/ipsw/: sequoia-15.6.1.pkr.hcl
prompts/: README.md  macos-ci-build-team.md  macos-ci-research-team.md  macos-ci-verify-team.md
specs/: enhance-readme.md  macos-ci.md  mvp.md  prereq-mvp.md  utm-improvements.md
specs/macos-ci/: 00-overview.md  01-tart-core.md  02-packer-tart-builder.md  03-tart-ci-and-orchard.md  04-tart-licensing-risk.md  05-utm-automation.md  06-utm-macos-guest.md  07-utm-settings-appendix.md  08-dotfiles-test-harness.md  09-dotfiles-under-test.md  10-tart-vs-utm-adr.md  11-sources.md  12-tooling-and-agent-loop.md  13-build-secrets.md  14-known-discrepancies.md
specs/plans/: README.md  macos-ci.html
src/macos_ci/: _config_core.py  _doctor_core.py  _gui_core.py  _harness_core.py  _tart_core.py  _triage_core.py  _utm_core.py  artifacts.py  cli.py  doctor.py  gui.py  harness.py  tart.py  utm.py  vm_debug.py
tests/: conftest.py
tests/fixtures/packer-sensitive/: fixture.pkr.hcl
tests/fixtures/utm/: arp-an-sample.txt  dhcpd_leases_sample.txt  spike-a-disk-format.md  utmctl-attach-help.txt  utmctl-clone-help.txt  utmctl-delete-help.txt  utmctl-help.txt  utmctl-list-help.txt  utmctl-list-output.txt  utmctl-start-help.txt  utmctl-status-help.txt  utmctl-stop-help.txt
tests/fixtures/verifier/: README.md  line-deleted.jsonl  line-moved-multi.jsonl  line-moved.jsonl  missing-file.jsonl  mustfail-inversion.jsonl  mustfail-moved.jsonl  oracle-exempt.jsonl  sample-doc.md  uncontrolled-negative.jsonl  wellformed-pair.jsonl
tests/gui/: test_screenshots.py
tests/integration/: conftest.py  test_apply.py
tests/manual/: conftest.py  test_utm_ux.py  test_visual.py
tests/pty/: test_interactive.py
tests/unit/: test_config_core.py  test_doctor.py  test_doctor_core.py  test_gui_core.py  test_harness.py  test_harness_core.py  test_tart_core.py  test_triage_core.py  test_utm.py  test_utm_cli.py  test_utm_core.py
tools/: pyrefly_diagnostics.py  pyrefly_type_coverage.py  verify_claims.py
xnotes/: links.txt
